 * Removed some deprecated symbols
   * enum EFFTType
   * Untemplatized ComplexTmpl/PolarTmpl -> Complex/Polar
   * Win32ConsoleApp, Win32Utils, ProcessingKernel
   * Application, BaseAudioAplication, AudioApllication
 * Bug fixes:
   * InControls are initialized to the default value of the control type
     (0 for numerics), this could change the behaviour (previously undefined)
 * Ports and Controls enhancements:
   * TypedIn/OutControl from deprecated to obsolete
   * Added In/OutControl/PortBase::SetName to be able to change the name of a 
     connection without disconnecting it.
 * Base classes Storage and XMLable are no more. Just XML kind of storage.
 * New plugins:
   * expression: Tranforms float control values using functions in C-like syntax.
   * timeDomainEffects: DopplerEffect, Flanger and more
 * DynamicType clean up:
   * Generic handling of optional DT attributes AddAttribute(i) and RemoveAttribute(i)
   * A lot of internal simplification (more needed)
   * New way of calling DynamicType constructor relying on the output of static methods
   * Fields information is available without instantiating an object
   * Shared and Shallow copies no more supported (until requested again)
   * Removed isPtr flag for fields types (always false).
   * Removed offset precomputation for preallocated mode
   * New generic accessors: AddAttribute(i), RemoveAttribute(i), HasAttribute(i)
   * ExistsAttr(i) removed in favor of HasAttribute(i)
   * Removed macro generated GetTypeX, GetSizeX, GetIdX
   * Removed unused protected methods which exposed implementation too much:
     Get/SetData, GetNumActiveAttr, GetDynamicTable, GetTypeDescTable,
     GetDataSize, Get/SetOwnsItsMemory
 * Examples:
   * TickExtractor fixed assert failures when using in controls as out controls
   * TickExtractor now depends on libsamplerate instead of the ancient 
     unavailable libresample 0.13 that had to be included in the sources.

2010-03-05 CLAM 1.4.0